Attempt to avoid menus covering each other

--- a/editor.css
+++ b/editor.css
@@ -18,7 +18,7 @@ body {
 
 	color: rgba(0,0,0,0.5);
 	border: 1px solid rgba(0,0,0,0.25);
-	background-color: rgba(0,0,0,0);
+	background-color: rgba(255,255,255,0.5);
 
 	margin: 2px;
 	padding: 8px 10px;
@@ -33,6 +33,12 @@ body {
 
 input {
 	cursor: pointer;
+}
+
+.dialog {
+	background-color: rgba(255, 255, 255, 0.5);
+  max-height: 560px;
+  overflow-y: auto;
 }
 
 .dialog label {
@@ -69,7 +75,7 @@ ul.menu {
 	text-decoration: none;
 
 	color: rgba(0,0,0,0.5);
-	background-color: rgba(0,0,0,0);
+	background-color: rgba(255,255,255,0.5);
 }
 
 ul.menu li {
